<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_beer_adviser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/beer_adviser"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_my_messenger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/my_messenger"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_dice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/dice"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_flashlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/flashlight"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_stopwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/stopwatch"
        android:textSize="25sp" />

    <Button
        android:id="@+id/btn_workout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/workout"
        android:textSize="25sp" />

</LinearLayout>